--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,16 +3,18 @@ activityKtx = "1.10.1"
 desugar_jdk_libs = "2.1.5"
 agp = "8.8.2"
 arrowCore = "2.0.1"
-kotlin = "2.1.10"
-kotlinxCoroutinesTest = "1.7.3"
-ksp = "2.1.10-1.0.31"
-coreKtx = "1.15.0"
+koinAndroid = "4.0.2"
+kotlin = "2.1.20"
+kotlinxCoroutinesTest = "1.10.1"
+ksp = "2.1.20-2.0.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.10.1"
+kotlinx-datetime-version = "0.6.2"
 constraintlayout = "2.2.1"
 lifecycleVersion = "2.8.7"
 navigationVersion = "2.8.9"
@@ -20,7 +22,7 @@ okhttpBom = "4.12.0"
 retrofit = "2.9.0"
 glide = "4.16.0"
 retrofit2KotlinxSerializationConverter = "1.0.0"
-kotlinxSerializationJson = "1.6.3"
+kotlinxSerializationJson = "1.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,12 +40,15 @@ arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrowCore" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime-version" }
 okhttp = { module = "com.squareup.okhttp3:okhttp" }
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttpBom" }
 retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2KotlinxSerializationConverter" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinAndroid" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 [plugins]
